--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,9 @@
 @string{aps = {American Physical Society,}}
 
 @article{info14020064,
+bibtex_show={true},
+html={https://doi.org/10.3390/info14020064},
+preview={preview_RISC-V.png},
 author={Kalapothas, Stavros and Galetakis, Manolis and Flamis, Georgios and Plessas, Fotis and Kitsos, Paris},
 title={A Survey on RISC-V-Based Machine Learning Ecosystem},
 journal={Information},
@@ -18,6 +21,9 @@ doi={10.3390/info14020064}
 }
 
 @Article{info13060279,
+bibtex_show={true},
+preview={preview_Edge_AI_Kria.png},
+html={https://doi.org/10.3390/info13060279},
 AUTHOR = {Kalapothas, Stavros and Flamis, Georgios and Kitsos, Paris},
 TITLE = {Efficient Edge-AI Application Deployment for FPGAs},
 JOURNAL = {Information},
@@ -32,6 +38,9 @@ DOI = {10.3390/info13060279}
 }
 
 @Article{electronics10161912,
+bibtex_show={true},
+preview={preview_Best_practices.png},
+html={https://doi.org/10.3390/electronics10161912},
 AUTHOR = {Flamis, Georgios and Kalapothas, Stavros and Kitsos, Paris},
 TITLE = {Best Practices for the Deployment of Edge Inference: The Conclusions to Start Designing},
 JOURNAL = {Electronics},
@@ -46,6 +55,9 @@ DOI = {10.3390/electronics10161912}
 }
 
 @INPROCEEDINGS{9566259,
+bibtex_show={true},
+html={https://ieeexplore.ieee.org/document/9566259},
+preview={preview_Workflow_on_CNN.gif},
   author={Flamis, Georgios and Kalapothas, Stavros and Kitsos, Paris},
   booktitle={2021 6th South-East Europe Design Automation, Computer Engineering, Computer Networks and Social Media Conference (SEEDA-CECNSM)}, 
   title={Workflow on CNN utilization and inference in FPGA for embedded applications: 6th South-East Europe Design Automation, Computer Engineering, Computer Networks and Social Media Conference (SEEDA-CECNSM 2021)}, 
@@ -57,6 +69,9 @@ DOI = {10.3390/electronics10161912}
   doi={10.1109/SEEDA-CECNSM53056.2021.9566259}}
 
 @INPROCEEDINGS{9460248,
+bibtex_show={true},
+html={https://ieeexplore.ieee.org/document/9460248},
+preview={preview_Importing_DNN.gif},
   author={Kalapothas, Stavros and Flamis, Georgios and Kitsos, Paris},
   booktitle={2021 10th Mediterranean Conference on Embedded Computing (MECO)}, 
   title={Importing Custom DNN Models on FPGAs}, 
@@ -68,6 +83,9 @@ DOI = {10.3390/electronics10161912}
   doi={10.1109/MECO52532.2021.9460248}}
 
 @INPROCEEDINGS{9939632,
+bibtex_show={true},
+html={https://ieeexplore.ieee.org/document/9939632},
+preview={preview_FPGA_SoC.gif},
   author={Flamis, Georgios and Kalapothas, Stavros and Kitsos, Paris},
   booktitle={2022 IFIP/IEEE 30th International Conference on Very Large Scale Integration (VLSI-SoC)}, 
   title={FPGA-SoC Deployment of Complex Deep Neural Network for Magnitude and Phase Computations in Denoising of Speech Signal}, 
