--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
 bibtex_show={true},
 html={https://doi.org/10.3390/info14020064},
 preview={preview_RISC-V.png},
+selected={true},
 author={Kalapothas, Stavros and Galetakis, Manolis and Flamis, Georgios and Plessas, Fotis and Kitsos, Paris},
 title={A Survey on RISC-V-Based Machine Learning Ecosystem},
 journal={Information},
@@ -24,6 +25,7 @@ doi={10.3390/info14020064}
 bibtex_show={true},
 preview={preview_Edge_AI_Kria.png},
 html={https://doi.org/10.3390/info13060279},
+selected={true},
 AUTHOR = {Kalapothas, Stavros and Flamis, Georgios and Kitsos, Paris},
 TITLE = {Efficient Edge-AI Application Deployment for FPGAs},
 JOURNAL = {Information},
